Add link to tweets.html in index.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,6 +14,8 @@
     <p>The second paragraph focuses on my short-term and long-term goals, including becoming a software engineer.</p>
     <p>In the third paragraph, I share some personal interests, including coding and exploring new technologies.</p>
     <p>Lastly, the fourth paragraph highlights the importance of education and continuous learning in my life.</p>
+    <p>Check out my tweets: <a href="tweets.html">Tweets Page</a></p>
+
 
     <a href="https://www.alxafrica.com/" visit Alx africal>
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width:200px; height:auto;">
