--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Idowu Pelumi - Personal Portfolio</title>
 </head>
 <body>
     <!-- Header Section -->
     <header>
-        <h1>pelumi Idowu</h1>
+        <h1>Idowu Pelumi</h1>
         <p>A passionate developer aiming to create meaningful projects.</p>
     </header>
 
@@ -25,8 +25,7 @@
     <!-- Content Sections -->
     <section id="introduction">
         <h2>Introduction</h2>
-        <p>Hello! I’m Idowu Pelumi, a <!DOCTYPE html>
-<html lang="enbudding web developer eager to explore the tech world.</p>
+        <p>Hello! I’m Idowu Pelumi, a budding web developer eager to explore the tech world.</p>
     </section>
 
     <section id="projects">
