Update index.html to meet required structure with header, main, aside, and footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,54 +6,79 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <h2>About Me</h2>
-    <h3>My Goals</h3>
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <p>This is the first paragraph about my journey in learning web development and building skills.</p>
-    <p>The second paragraph focuses on my short-term and long-term goals, including becoming a software engineer.</p>
-    <p>In the third paragraph, I share some personal interests, including coding and exploring new technologies.</p>
-    <p>Lastly, the fourth paragraph highlights the importance of education and continuous learning in my life.</p>
-    <p>Check out my tweets: <a href="tweets.html">Tweets Page</a></p>
+    <!-- Main Section -->
+    <main>
+        <!-- Article -->
+        <article>
+            <h1>Welcome to My Portfolio</h1>
+            <h2>About Me</h2>
+            <h3>My Goals</h3>
 
+            <p>This is the first paragraph about my journey in learning web development and building skills.</p>
+            <p>The second paragraph focuses on my short-term and long-term goals, including becoming a software engineer.</p>
+            <p>In the third paragraph, I share some personal interests, including coding and exploring new technologies.</p>
+            <p>Lastly, the fourth paragraph highlights the importance of education and continuous learning in my life.</p>
+            <p>Check out my tweets: <a href="tweets.html">Tweets Page</a></p>
 
-    <a href="https://www.alxafrica.com/" visit Alx africal>
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width:200px; height:auto;">
-    </a>
-   <!-- Article containing the table -->
-    <article>
-        <h2>Learners Information</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Age</th>
-                    <th>Country</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>John</td>
-                    <td>25</td>
-                    <td>USA</td>
-                </tr>
-                <tr>
-                    <td>Emily</td>
-                    <td>28</td>
-                    <td>Canada</td>
-                </tr>
-                <tr>
-                    <td>Michael</td>
-                    <td>32</td>
-                    <td>Australia</td>
-                </tr>
-                <tr>
-                    <td>Sophia</td>
-                    <td>21</td>
-                    <td>UK</td>
-                </tr>
-            </tbody>
-        </table>
-    </article>
+            <a href="https://www.alxafrica.com/" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width:200px; height:auto;">
+            </a>
+
+            <!-- Table -->
+            <h2>Learners Information</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
+        </article>
+
+        <!-- Aside -->
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>Made by Your Name - <a href="https://github.com/Pearltechie" target="_blank">GitHub Profile</a></p>
+    </footer>
 </body>
 </html>
+
