--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link href="base.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <style>
+        body {
+            background color: blueviolet;
+        }
+        h1 {
+            color: pink;
+        }
+    </style>
+
 </head>
 <body>
     <!-- Header Section -->
