--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio</title>
     <style>
         body {
-            background color: blue;
+            background-color: blue;
         }
         h1 {
             color: pink;
