--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <style>
-        body {
-            background-color: blue;
-        }
-        h1 {
-            color: pink;
-        }
-    </style>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 
 </head>
 <body>
