--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="work_on_smartphone">
     <!-- Header Section -->
     <header>
         <nav>
